# judgment

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
cli/: main.py
core/: __init__.py  bayesian.py  config.py  content_signals.py  control.py  corrective.py  cusum.py  diagnostics.py  emission.py  engine.py  hawkes.py  hmm.py  info_gain.py  judgment_engine.py  mdp_pomdp.py  poisson.py  pomcp.py  pomcp_fast.py  pomdp.py  semantic_drift.py  stochastic_control.py  training.py
dashboard/: app.py
docs/: anthropic-alignment.md  architecture-redesign.md  eval-design.md  hawkes-redesign.md  limitations.md  pomcp-content-design.md  production-gotchas.md  three-gaps-design.md
examples/: coding_agent_demo.py  cost_savings_demo.py  langgraph_agent.py  minimal.py
harness/: __init__.py  executor.py  loop.py  tools.py
harness_integration/: __init__.py  decision_loop.py
integration/: __init__.py  base.py  crewai.py  custom.py  langgraph.py
observability/: __init__.py  logging.py  metrics.py
scripts/: ablation.py  ablation_results.json  bench_pomcp_speed.py  benchmark.py  benchmark_adapter.py  benchmark_results.json  eval_results.json  eval_runner.py  fault_models.py  profile_engine.py  profile_pomcp.py  trace_analyzer.py
tests/: test_content_signals.py  test_corrective.py  test_cusum.py  test_edge_cases.py  test_harness.py  test_hawkes.py  test_hmm.py  test_integration.py  test_integration_adapters.py  test_integration_crewai.py  test_integration_custom.py  test_langgraph_topologies.py  test_observability.py  test_pomcp.py  test_pomdp.py  test_training.py
