[project]
name = "judgment"
version = "0.2.0"
description = "Math-driven Agent Harness — CUSUM + HMM + POMDP decision engine with built-in execution loop"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "pearthink123"}
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.28",
    "pandas>=2.0",
    "matplotlib>=3.7",
]
llm = [
    "openai>=1.0",
]
dev = [
    "pytest",
    "ruff",
]
all = [
    "judgment[dashboard,llm,dev]",
]

[project.scripts]
judgment = "cli.main:main"

[tool.setuptools.packages.find]
include = ["core*", "harness*", "cli*", "dashboard*", "examples*"]
