[project]
name = "judgment"
version = "0.2.0"
description = "Math-driven Agent Harness — CUSUM + HMM + POMDP decision engine with built-in execution loop"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "pearthink123"}
]
keywords = ["agent", "harness", "pomdp", "hmm", "cusum", "mcts", "langgraph", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.28",
    "pandas>=2.0",
    "matplotlib>=3.7",
]
llm = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.30",
]
semantic = [
    "sentence-transformers>=2.0",
]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
all = [
    "judgment[dashboard,llm,dev]",
]

[project.urls]
Homepage = "https://github.com/pearthink123/judgment"
Repository = "https://github.com/pearthink123/judgment"
Issues = "https://github.com/pearthink123/judgment/issues"

[project.scripts]
judgment = "cli.main:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "harness*", "integration*", "cli*", "dashboard*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "I", "N", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["core", "harness", "integration", "observability", "cli"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = false
follow_imports = "skip"
